@@ -21,6 +21,9 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
+
+using System.Threading.Tasks;
+
 namespace RailwayEssentialCore
 {
     public interface ITrackViewer
@@ -32,5 +35,7 @@ namespace RailwayEssentialCore
         void SetUrl(string url);
 
         void Load();
+
+        Task<bool> Print(string targetFilename);
     }
 }
